添加history接口
